--- a/exercicios/index.html
+++ b/exercicios/index.html
@@ -20,6 +20,7 @@
         </aside>
         <h2>&#x1F4C1; Módulo 01: Primeiros Passos</h2>
         <ul>
+<li>mango ,lombo,amba</li></limango>
             <li><a href="modulo-01/ex001/index.html">Um HTML simples</a></li>
             <li><a href="modulo-01/ex002/index.html">Parágrafos, quebras e emojis</a></li>
             <li><a href="modulo-01/ex003/index.html">Inserindo imagens simples</a></li>
